--- a/Example/Podfile
+++ b/Example/Podfile
@@ -4,4 +4,5 @@ workspace '../IconFontsKit.xcworkspace'
 target 'IconFontsKitExample' do
     pod "IconFontsKit", :path => "../IconFontsKit.podspec"
     pod "JTSImageViewController"
+    pod "CHTCollectionViewWaterfallLayout"
 end
