--- a/Example/Podfile
+++ b/Example/Podfile
@@ -2,6 +2,6 @@ platform :ios, '7.0'
 workspace '../IconFontKit.xcworkspace'
 
 target 'IconFontKitExample' do
-    pod "IconFontKit", :path => "../IconFontKit.podspec"
+    pod "IconFontKit", :path => "../"
     pod "JTSImageViewController"
 end
